2009-07-27  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-roleForComponentsWithAccessClass:forUser:]): now returns an empty
	string when user is owner of the calendar.

2009-07-23  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m (repeatLabel), (ownerIsAttendee),
	(delegateIsAttendee), (eventIsReadOnly), (startDateString), (endDateString):
	Added for Mantis 78.

2009-07-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-davPOSTRequest:withContentType:inContext:) we use a simple comma
	as recipient separator but with trim the resulting elements.

	* SoObjects/SOGo/NSArray+Utilities.m (-trimmedComponents): new
	method that returns a trimmed/stripped version of the strings
	contained in the array.

2009-07-22  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m: Added "editable" field to tasks, so
	that the UI can disable the checkboxes next to them.

2009-07-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	(-davCalendarScheduleInboxURL, -davCalendarScheduleOutboxURL)
	(-davDropboxHomeURL, -davNotificationsURL): proxied methods to a
	common accessor.

2009-07-21  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalendarProperties.m: Prevent doing anything when not
	executing @"saveProperties". Added wrapper methods for
	showCalendarTasks/Alarms. Added reloadTasks var.
	* SoObjects/Appointments/SOGoAppointmentFolder.m: Added
	(set/showCalendarTasks), (set/showCalendarAlarms)
	* SoObjects/SOGo/SOGoGCSFolder.m: Added dicts to cleanup on unsubscribe.
	* UI/Scheduler/UIxCalListingActions.m: Added support for
	showCalendarAlarms/Tasks.

2009-07-21  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	-stringByEscapingURL]): the UTF-8 encoding is now specified for the
	filename of an attachment.
